# PrintCatalog

./: .gitignore  AGENTS.md  GEMINI.md  PRINT_COLOR_EXPERIMENT_RESULTS.md  README.md  RESEARCH.md  index.html  package-lock.json  package.json  tauri_vs_electron_analysis.md  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  print_engine.rs  printer.rs
tools/: pdf_deep_inspect.py  pdf_image_compare.py  pdf_inspect.py
website/: developers.html  guide.html  index.html  styles.css
