[package]
name = "print-catalog"
version = "1.2.0"
description = "High quality photo grid printing"
authors = ["PrintCatalog"]
edition = "2024"

[lib]
name = "print_catalog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["png", "jpeg", "tiff", "bmp"] }
base64 = "0.22"
windows = { version = "0.61", features = ["Win32_UI_ColorSystem", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Printing", "Win32_UI_Controls_Dialogs", "Win32_System_Memory", "Win32_Security", "Win32_Foundation", "Win32_Storage_Xps"] }
tempfile = "3"
